--- a/ParkyWeb/Views/Shared/_Layout.cshtml
+++ b/ParkyWeb/Views/Shared/_Layout.cshtml
@@ -23,7 +23,7 @@
                 <div class="navbar-collapse collapse d-sm-inline-flex flex-sm-row-reverse">
                     <ul class="navbar-nav flex-grow-1">
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Trails" asp-action="Index">Trail</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="NationalParks" asp-action="Index">National Park</a>
