--- a/ParkyWeb/Views/NationalParks/Index.cshtml
+++ b/ParkyWeb/Views/NationalParks/Index.cshtml
@@ -12,7 +12,7 @@
     <div style="class="p-3 rounded">
         <table id="tblData" class="table table-striped table-bordered" style="width:100%">
             <thead>
-                <tr class="table-primary">
+                <tr class="table">
                     <th>Name</th>
                     <th>State</th>
                     <th></th>
