--- a/ParkyWeb/Views/Trails/Index.cshtml
+++ b/ParkyWeb/Views/Trails/Index.cshtml
@@ -12,7 +12,7 @@
     <div style="class=" p-3 rounded">
         <table id="tblData" class="table table-striped table-bordered" style="width:100%">
             <thead>
-                <tr class="table-primary">
+                <tr class="table">
                     <th>National Park Name</th>
                     <th>Trail Name</th>
                     <th>Distance</th>
