--- a/ParkyWeb/Views/Shared/_Layout.cshtml
+++ b/ParkyWeb/Views/Shared/_Layout.cshtml
@@ -28,15 +28,15 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
                         </li>
-                        @if (httpAcc.HttpContext.Session.GetString("JWToken")!= null &&
-                             httpAcc.HttpContext.Session.GetString("JWToken").ToString().Length > 0)
-                        {
+                        @if(User.IsInRole("Admin") || User.IsInRole("test")){ 
                             <li class="nav-item">
                                 <a class="nav-link text-dark" asp-controller="Trails" asp-action="Index">Trail</a>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link text-dark" asp-controller="NationalParks" asp-action="Index">National Park</a>
                             </li>
+                        }
+                        @if(httpAcc.HttpContext.Session.GetString("JWToken")!=null && httpAcc.HttpContext.Session.GetString("JWToken").ToString().Length > 0) { 
                             <li class="nav-item">
                                 <a class="nav-link text-dark" asp-controller="Home" asp-action="Logout">Logout</a>
                             </li>
@@ -63,6 +63,15 @@
     </header>
     <div class="container">
         <main role="main" class="pb-3">
+            @if (TempData["alert"] != null)
+            {
+                <div class="alert alert-danger alert-dismissible fade show" role="alert">
+                    @TempData["alert"]
+                    <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                    </button>
+                </div>
+            }
             @RenderBody()
         </main>
     </div>
